# wordnet_ros

./: CMakeLists.txt  README.md  package.xml
nouse/: try.py  try_2.py  word_sim.py
src/: main.py  main_jp.py  wordnet_jp.py
